--- a/k8s-spring-boot-deployment.yml
+++ b/k8s-spring-boot-deployment.yml
@@ -4,7 +4,7 @@ metadata:
   name: jhooq-springboot
   namespace: jhooq-springboot
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: jhooq-springboot
@@ -15,7 +15,7 @@ spec:
       namespace: jhooq-springboot
     spec:
       containers:
-        - name: springboot
+        - name: jhooq-docker-demo
           image: ayoubmahou/jhooq-docker-demo:jhooq-docker-demo
           ports:
             - containerPort: 8080
